# RVLCodec

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
examples/: basic_usage.rs
src/: lib.rs  test_rvlcodec.py
