[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rvlcodec"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: System :: Archiving :: Compression",
]
dynamic = ["version", "description", "readme", "authors"]
dependencies = []

[project.urls]
Homepage = "https://github.com/kedarisetti/rvlcodec"
Repository = "https://github.com/kedarisetti/rvlcodec"
Documentation = "https://docs.rs/rvlcodec" 